# sentinelOps

./: .dockerignore  .env.example  .gitignore  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.tester  LICENCE  Makefile  README.md  SECURITY.md  VALIDACION.md  demo.sh  docker-compose.demo.yml  docker-compose.grpc.yml  docker-compose.observability.yml  docker-compose.opa.yml  docker-compose.storage.yml  go.mod  go.sum
.github/: changelog-config.json  dependabot.yml
.github/workflows/: ci-devsecops.yml  ci.yaml  codeql.yml  release.yml  security.yml  tests.yml
benchmarks/: network_bench_test.go  opa_bench_test.go  validator_bench_test.go
cmd/client/: main.go
cmd/server/: main.go
deploy/kubernetes/: namespace.yaml  networkpolicy.yaml  servicemonitor.yaml
docs/: openapi.yaml  swagger.json
env/: container-ssh.env  dev-ssh.env  dev-tcp.env  minikube-hardened.env
migrations/: 000001_storage.down.sql
rust/input-guard-grpc/: Cargo.toml  Dockerfile  build.rs
rust/input-guard-grpc/src/: main.rs
scripts/: benchmark-summary.sh  bootstrap.sh  check-no-hardcoded-secrets.sh  ci-check.sh  ci-helm-validate.sh  ci-policy-check.sh  cleanup.sh  control-api-curl-examples.sh  deploy-local.sh  docker-demo.sh  docker-entrypoint.sh  env-local.sh  generate-openapi.sh  generate-proto.sh  generate-secrets.sh  helm-deploy.sh  observability-smoke.sh  policy-check.sh  release-clean.sh  release-verify.sh  run-audit.sh  run-benchmarks.sh  runtime-evidence.sh  setup-dev-ubuntu.sh  setup-ssh-lab.sh  storage-smoke.sh  test-e2e-full.sh  test-e2e.sh
(+103 files in other folders)
