[package]
name = "input-guard-grpc"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "input-guard-grpc"
path = "src/main.rs"

[dependencies]
input-guard = { path = "../input-guard" }
prost = "0.14"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tonic = "0.12"
tonic-health = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[build-dependencies]
tonic-build = "0.12"
